# YajuFetch

./: .gitignore  CMakeLists.txt  install.sh
src/: main.cpp
